objects/HEM__c.object
<CustomObject>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Per_Adult__c</fullName>
        <label>Value Per Adult(Monthly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Per_Dependant__c</fullName>
        <label>Value Per Dependant(Montlhy)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>HEM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Value_Per_Adult__c</columns>
        <columns>Value_Per_Dependant__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HEM-{0000000000}</displayFormat>
        <label>HEM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HEM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>